--- a/frontend.html
+++ b/frontend.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>AI Mental Health Detection</title>
+    <title>SentimentCare</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,7 +15,7 @@
         .container {
             max-width: 700px;
             margin: auto;
-            background: white;
+            background: rgb(177, 237, 236);
             padding: 25px;
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
@@ -60,7 +60,7 @@
         }
 
         .result-box {
-            background: #f4f7ff;
+            background: #a7b0ca;
             padding: 15px;
             border-radius: 6px;
             margin-top: 20px;
@@ -69,7 +69,7 @@
         }
 
         pre {
-            background: #efefef;
+            background: #da9ff8;
             padding: 10px;
             border-radius: 5px;
             white-space: pre-wrap;
@@ -105,7 +105,7 @@
             const text = document.getElementById("userText").value.trim();
             if (!text) return alert("Enter some text first!");
 
-            const res = await fetch("http://127.0.0.1:8000/predict_text", {
+            const res = await fetch("/predict_text", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ text })
@@ -154,7 +154,7 @@
             const formData = new FormData();
             formData.append("file", blob, "audio.wav");
 
-            const res = await fetch("http://127.0.0.1:8000/predict_audio", {
+            const res = await fetch("/predict_audio", {
                 method: "POST",
                 body: formData
             });
@@ -175,7 +175,7 @@
             formData.append("text", text);
             formData.append("file", lastRecordedBlob, "audio.wav");
 
-            const res = await fetch("http://127.0.0.1:8000/predict_both", {
+            const res = await fetch("/predict_both", {
                 method: "POST",
                 body: formData
             });
